# codeflix-admin-catalog

./: .gitignore  .pdm.toml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/__seedwork/: __init__.py  entities.py  exceptions.py
src/__seedwork/domain/: test_unit_validators.py  validators.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_value_objects.py
src/category/domain/: entities.py
src/category/domain/tests/: test_entities.py
src/category/tests/domain/: test_entities.py  test_unit_entitties.py
